In development.

* Documented new Check API and fixed macros to allow multiple
  evaluation.

* Added checkmk, a tool for reducing "boilerplate coding" when writing
  unit tests with check.

Tue, Sep 22, 2009: Released Check 0.9.8
  based on r559 (2009-09-23 21:00).

* Fix CHECK_MICRO_VERSION, left at 6 in 0.9.7 by mistake.

Tue, Sep 22, 2009: Released Check 0.9.7
  based on r552 (2009-09-22 09:26).

* Added CK_SUBUNIT support for outputting test information in the subunit wire
  protocol. See the check manual for more information. (Contributed by Robert
  Collins).

* Added code and tests for timeout scaling via environment variable.
  Feature requested in tracker item #1549835 on sourceforge.

* Added documentation for testing exit values with tcase_add_exit_test().

* Add make_macros perl script from somebody (who?)

* add type to check_type error message

* add contrib dir with xslt transform

* function exist testing support (patch #1726574).

* introduce HAVE_WORKING_SETENV to protect tc_timeout_env usage

* support running tests with multiple pthreads (Daniel Gollub, closes 1391527)

* partial MSYS/MinGW support

Mon, Dec 29, 2008: Released Check 0.9.6
  based on r453 (2008-12-01 22:14:15).

* 'make distcheck' does not work out of the box. Disable the two
  top lines in doc/Makefile.am and it shall pass. Will have to
  be fixed later.

* add call to AC_REPLACE_FUNCS([strsignal])
* add new rpl_strsignal following rpl_(re)malloc template, body
  of function due to Roland Illig
  -- hopefully closes 1629755

* add missing NULL argument to fail* varargs macro calls
* define incorrect tests for __GNUC__ only
   -- both per Roland Illig in bug 1677391

* define CK_ATTRIBUTE_UNUSED for GCC >= 2.95, closing:
  [ 1674626 ] compile error with non defined __attribute__ compiler

* Fixed error in documentation example Makefile.am, bug #1888237

* Fixed spelling (patch #1652630)

* Handle NULL in srunner_add_suite(). Fixes #1624887
