@@ -1,7 +1,8 @@
 In development.
 
-* Documented new Check API and fixed macros to allow multiple
-  evaluation.
+* Improvements to the new Check API: documentation, macros that allow
+  multiple evaluation, unit tests, and new
+  ck_assert_(str|int)_(lt|le|gt|ge) comparison functions.
 
 * Added checkmk, a tool for reducing "boilerplate coding" when writing
   unit tests with check.
